--- a/views/index.html
+++ b/views/index.html
@@ -115,6 +115,12 @@
                                 <input type="text" class="form-control" name="category" placeholder="请输入分类">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">网址</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="website" placeholder="请输入网址">
+                            </div>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -156,6 +162,7 @@
             <td>{{sponsor}}</td>
             <td>{{undertaker}}</td>
             <td>{{category}}</td>
+            <td>{{website}}</td>
             <td>
                 <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-pencil"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
