--- a/views/index.html
+++ b/views/index.html
@@ -64,19 +64,19 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">名称</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="chnName" placeholder="请输入名称">
+                                <input type="text" class="form-control" id="chnName" placeholder="请输入名称">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">英文名</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="engName" placeholder="请输入英文名">
+                                <input type="text" class="form-control" id="engName" placeholder="请输入英文名">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">地点</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="position" placeholder="请输入地点">
+                                <input type="text" class="form-control" id="position" placeholder="请输入地点">
                             </div>
                         </div>
                         <div class="form-group">
@@ -88,13 +88,13 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">首期年份</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="firstYear" placeholder="请输入首期年份">
+                                <input type="text" class="form-control" id="firstYear" placeholder="请输入首期年份">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">大厅</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="hallName" placeholder="请输入大厅地点">
+                                <input type="text" class="form-control" id="hallName" placeholder="请输入大厅地点">
                             </div>
                         </div>
                         <div class="form-group">
@@ -106,19 +106,19 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">主办单位</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="undertaker" placeholder="请输入主办单位">
+                                <input type="text" class="form-control" id="undertaker" placeholder="请输入主办单位">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">分类</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="category" placeholder="请输入分类">
+                                <input type="text" class="form-control" id="category" placeholder="请输入分类">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">网址</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="website" placeholder="请输入网址">
+                                <input type="text" class="form-control" id="website" placeholder="请输入网址">
                             </div>
                         </div>
                     </form>
@@ -208,16 +208,24 @@
         loadPage(1,$('#search').val())
     })
     $('#save-btn').on('click',function(){
-        var formdata = new FormData($("#add-form")[0]);
         $.ajax({
             type:'POST',
             url: '/fair/save',
-            data:formdata,
-            contentType:false,
-            processData:false,
+            data:{
+                chnName:$('#chnName').val(),
+                engName:$('#engName').val(),
+                position:$('#position').val(),
+                time:$('#time').val(),
+                firstYear:$('#firstYear').val(),
+                hallName:$('#hallName').val(),
+                sponsor:$('#sponsor').val(),
+                undertaker:$('#undertaker').val(),
+                category:$('#category').val(),
+                website:$('#website').val()
+            },
             success: function(data){
                 alert("添加成功");
-                $(this).resetForm(); // 提交后重置表单
+                $("#add").modal("hide")
                 loadPage(1)
             }
         })
