--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
                 <input class="btn btn-success" type="button" value="添加" data-toggle="modal" data-target="#edit">
             </div>
             <div class="form-group">
-                <input class="btn btn-warning" type="button" value="导入" id="import-btn">
+                <input class="btn btn-warning" type="button" value="导入" data-toggle="modal" data-target="#import">
             </div>
         </form>
         <div id="list"></div>
@@ -115,6 +115,40 @@
                     </button>
                     <button type="button" class="btn btn-primary" id="save-btn">
                         保存
+                    </button>
+                </div>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+
+    <div class="modal fade" id="import" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close"
+                            data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <h4 class="modal-title">
+                        导入
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <form id="import-form" class="form-horizontal" role="form" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">文件（*.xlsx）</label>
+                            <div class="col-sm-8">
+                                <input type="file"  name="uploadfile" id="uploadfile"/>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                        关闭
+                    </button>
+                    <button type="button" class="btn btn-primary" id="upload-btn">
+                        上传
                     </button>
                 </div>
             </div>
@@ -236,6 +270,21 @@
             success: function(data){
                 alert("保存成功");
                 $("#edit").modal("hide")
+                loadPage(1)
+            }
+        })
+    })
+    $('#upload-btn').on('click',function(){
+        var formdata = new FormData($("#import-form")[0]);
+        $.ajax({
+            type:'POST',
+            url: '/fair/import',
+            data:formdata,
+            processData: false,
+            contentType: false,
+            success: function(data){
+                alert("导入成功");
+                $("#import").modal("hide")
                 loadPage(1)
             }
         })
