--- a/views/index.html
+++ b/views/index.html
@@ -1,306 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css">
-    <script src="/javascripts/jquery-2.1.4.min.js"></script>
-    <script src="/javascripts/jquery-modal-event.js"></script>
-    <script src="/javascripts/bootstrap.min.js"></script>
-    <script src="/javascripts/handlebars-v3.0.3.js"></script>
-    <script src="/javascripts/handlebars-jquery.js"></script>
-    <script src="/javascripts/page.js"></script>
     <div class="container">
-        <p></p>
-        <form class="form-inline">
-            <div class="form-group">
-                <input type="text" class="form-control" id="search">
-            </div>
-            <div class="form-group">
-                <input class="btn btn-default" type="button" value="查询" id="search-btn">
-            </div>
-            <div class="form-group">
-                <input class="btn btn-success" type="button" value="添加" data-toggle="modal" data-target="#edit">
-            </div>
-            <div class="form-group">
-                <input class="btn btn-warning" type="button" value="导入" data-toggle="modal" data-target="#import">
-            </div>
-        </form>
-        <div id="list"></div>
-        <div class="text-right">
-            <nav>
-                <ul class="pagination">
-                </ul>
-            </nav>
-        </div>
+        aaa
     </div>
-    <!-- 模态框（Modal） -->
-    <div class="modal fade" id="edit" tabindex="-1" role="dialog"
-         aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close"
-                            data-dismiss="modal" aria-hidden="true">
-                        &times;
-                    </button>
-                    <h4 class="modal-title" id="modalLabel">
-                        添加
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <form id="add-form" class="form-horizontal" role="form">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">名称</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control hide" id="_id">
-                                <input type="text" class="form-control" id="chnName" placeholder="请输入名称">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">英文名</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="engName" placeholder="请输入英文名">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">地点</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="position" placeholder="请输入地点">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="time" class="col-sm-2 control-label">时间</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="time" placeholder="请输入时间">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">首期年份</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="firstYear" placeholder="请输入首期年份">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">大厅</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="hallName" placeholder="请输入大厅地点">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="sponsor" class="col-sm-2 control-label">主办方</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="sponsor" placeholder="请输入主办方">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">主办单位</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="undertaker" placeholder="请输入主办单位">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">分类</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="category" placeholder="请输入分类">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">网址</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="website" placeholder="请输入网址">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        关闭
-                    </button>
-                    <button type="button" class="btn btn-primary" id="save-btn">
-                        保存
-                    </button>
-                </div>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-
-    <div class="modal fade" id="import" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close"
-                            data-dismiss="modal" aria-hidden="true">
-                        &times;
-                    </button>
-                    <h4 class="modal-title">
-                        导入
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <form id="import-form" class="form-horizontal" role="form" enctype="multipart/form-data">
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">文件（*.xlsx）</label>
-                            <div class="col-sm-8">
-                                <input type="file"  name="uploadfile" id="uploadfile"/>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        关闭
-                    </button>
-                    <button type="button" class="btn btn-primary" id="upload-btn">
-                        上传
-                    </button>
-                </div>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
 </html>
-<script id="list-template" type="text/x-handlebars-template">
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <td>名称</td>
-            <td>英文名</td>
-            <td>地点</td>
-            <td>时间</td>
-            <td>首期年份</td>
-            <td>大厅</td>
-            <td>主办方</td>
-            <td>主办单位</td>
-            <td>分类</td>
-            <td>网址</td>
-            <th>操作</th>
-        </tr>
-        </thead>
-        {{#each data.list}}
-        <tr id="{{_id}}">
-            <td id="chnName{{_id}}">{{chnName}}</td>
-            <td id="engName{{_id}}">{{engName}}</td>
-            <td id="position{{_id}}">{{position}}</td>
-            <td id="time{{_id}}">{{time}}</td>
-            <td id="firstYear{{_id}}">{{firstYear}}</td>
-            <td id="hallName{{_id}}">{{hallName}}</td>
-            <td id="sponsor{{_id}}">{{sponsor}}</td>
-            <td id="undertaker{{_id}}">{{undertaker}}</td>
-            <td id="category{{_id}}">{{category}}</td>
-            <td id="website{{_id}}">{{website}}</td>
-            <td>
-                <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-pencil" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
-            </td>
-        </tr>
-        {{/each}}
-    </table>
-</script>
-<script>
-    loadPage()
-    function loadPage(pageNo,search){
-        if(pageNo){
-            currPage=pageNo;
-        }
-        var param={
-            page:pageNo,
-            limit:5
-        }
-        if(search){
-            param.search=search;
-        }
-        $.ajax({
-            type : "GET",
-            url : "/fair/find",
-            data:param,
-            success: function(data) {
-                var obj = data;
-                if(obj.status=="200"){
-                    $('#list').handlebars($('#list-template'), obj);
-                    page(obj.data.count,'loadPage')
-                }else{
-                    alert('加载失败。')
-                }
-            }
-        });
-    }
-    function del(id){
-        $.get("/fair/remove",{_id:id}, function(result){
-            $('#'+id).remove()
-        });
-    }
-    function edit(id){
-        $('#modalLabel').html('更新')
-        $('#_id').val(id);
-        $('#chnName').val($('#chnName'+id).html());
-        $('#engName').val($('#engName'+id).html());
-        $('#position').val($('#position'+id).html());
-        $('#time').val($('#time'+id).html());
-        $('#firstYear').val($('#firstYear'+id).html());
-        $('#hallName').val($('#hallName'+id).html());
-        $('#sponsor').val($('#sponsor'+id).html());
-        $('#undertaker').val($('#undertaker'+id).html());
-        $('#category').val($('#category'+id).html());
-        $('#website').val($('#website'+id).html());
-    }
-    $('#search-btn').on('click',function(){
-        loadPage(1,$('#search').val())
-    })
-    $('#save-btn').on('click',function(){
-        var id=$('#_id').val();
-        var url='/fair/save';
-        var param={
-            chnName:$('#chnName').val(),
-            engName:$('#engName').val(),
-            position:$('#position').val(),
-            time:$('#time').val(),
-            firstYear:$('#firstYear').val(),
-            hallName:$('#hallName').val(),
-            sponsor:$('#sponsor').val(),
-            undertaker:$('#undertaker').val(),
-            category:$('#category').val(),
-            website:$('#website').val()
-        };
-        if(id){
-            url='/fair/update';
-            param._id=id;
-        }else{
-            $('#modalLabel').html('添加')
-        }
-        $.ajax({
-            type:'POST',
-            url: url,
-            data:param,
-            success: function(data){
-                alert("保存成功");
-                $("#edit").modal("hide")
-                loadPage(1)
-            }
-        })
-    })
-    $('#upload-btn').on('click',function(){
-        var formdata = new FormData($("#import-form")[0]);
-        $.ajax({
-            type:'POST',
-            url: '/fair/import',
-            data:formdata,
-            processData: false,
-            contentType: false,
-            success: function(data){
-                alert("导入成功");
-                $("#import").modal("hide")
-                loadPage(1)
-            }
-        })
-    })
-    $('#edit').on('hide', function() {
-        $('#modalLabel').html('添加')
-        $('#_id').val('');
-        $('#chnName').val('');
-        $('#engName').val('');
-        $('#position').val('');
-        $('#time').val('');
-        $('#firstYear').val('');
-        $('#hallName').val('');
-        $('#sponsor').val('');
-        $('#undertaker').val('');
-        $('#category').val('');
-        $('#website').val('');
-    });
-</script>
