--- a/views/user.html
+++ b/views/user.html
@@ -59,12 +59,14 @@
     <table class="table table-bordered">
         <thead>
         <tr>
-            <td>名称</td>
+            <td>用户名</td>
+            <td>角色</td>
             <th>操作</th>
         </tr>
         </thead>
         {{#each data.list}}
         <tr id="{{_id}}">
+            <td id="username{{_id}}">{{username}}</td>
             <td id="roleName{{_id}}">{{roleName}}</td>
             <td>
                 <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-pencil" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -89,7 +91,7 @@
         }
         $.ajax({
             type : "GET",
-            url : "/role/find",
+            url : "/user/find",
             data:param,
             success: function(data) {
                 var obj = data;
@@ -103,7 +105,7 @@
         });
     }
     function del(id){
-        $.get("/role/remove",{_id:id}, function(result){
+        $.get("/user/remove",{_id:id}, function(result){
             $('#'+id).remove()
         });
     }
@@ -119,7 +121,7 @@
         var param={
             roleName:$('#roleName').val()
         };
-        var url='/role/update';
+        var url='/user/updateRole';
         param._id=id;
         $.ajax({
             type:'POST',
