--- a/views/personal.html
+++ b/views/personal.html
@@ -4,10 +4,10 @@
         <p></p>
         <form class="form-inline">
             <div class="form-group">
-                <input class="btn btn-default" type="button" value="修改密码" id="search-btn">
+                <input class="btn btn-default" type="button" value="修改密码"  data-toggle="modal" data-target="#editPwd">
             </div>
             <div class="form-group">
-                <input class="btn btn-success" type="button" value="修改资料">
+                <input class="btn btn-success" type="button" value="修改资料"  data-toggle="modal" data-target="#editInfo">
             </div>
         </form>
         <div id="list"></div>
@@ -18,6 +18,74 @@
             </nav>
         </div>
     </div>
+    <div class="modal fade" id="editPwd" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close"
+                            data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <h4 class="modal-title">
+                        修改密码
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <form id="editPwd-form" class="form-horizontal" role="form" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">名称</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control hide" id="_id">
+                                <input type="text" class="form-control" id="chnName" placeholder="请输入名称">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                        关闭
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                        保存
+                    </button>
+                </div>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+    <div class="modal fade" id="editInfo" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close"
+                            data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <h4 class="modal-title">
+                        修改资料
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <form id="editInfo-form" class="form-horizontal" role="form" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">名称</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control hide" id="_id">
+                                <input type="text" class="form-control" id="chnName" placeholder="请输入名称">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                        关闭
+                    </button>
+                    <button type="button" class="btn btn-primary" id="upload-btn">
+                        保存
+                    </button>
+                </div>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
 </html>
 <script>
     function edit(id){
@@ -28,4 +96,22 @@
         $('#_id').val('');
         $('#roleName').val('');
     });
+    $('#save-btn').on('click',function(){
+        var id=$('#_id').val();
+        var param={
+            roleName:$('#roleName').val()
+        };
+        var url='/user/update';
+        param._id=id;
+        $.ajax({
+            type:'POST',
+            url: url,
+            data:param,
+            success: function(data){
+                alert("保存成功");
+                $("#edit").modal("hide")
+                loadPage(1)
+            }
+        })
+    })
 </script>
