--- a/views/fair.html
+++ b/views/fair.html
@@ -16,7 +16,25 @@
                 <input class="btn btn-warning" type="button" value="导入" data-toggle="modal" data-target="#import">
             </div>
         </form>
-        <div id="list"></div>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <td>名称</td>
+                    <td>Logo</td>
+                    <td>英文名</td>
+                    <td>地点</td>
+                    <td>时间</td>
+                    <td>首期年份</td>
+                    <td>大厅</td>
+                    <td>主办方</td>
+                    <td>主办单位</td>
+                    <td>分类</td>
+                    <td>网址</td>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody id="list"></tbody>
+        </table>
         <div class="text-right">
             <nav>
                 <ul class="pagination">
@@ -161,51 +179,34 @@
     </div><!-- /.modal -->
 </html>
 <script id="list-template" type="text/x-handlebars-template">
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <td>名称</td>
-            <td>Logo</td>
-            <td>英文名</td>
-            <td>地点</td>
-            <td>时间</td>
-            <td>首期年份</td>
-            <td>大厅</td>
-            <td>主办方</td>
-            <td>主办单位</td>
-            <td>分类</td>
-            <td>网址</td>
-            <th>操作</th>
-        </tr>
-        </thead>
-        {{#each data.list}}
-        <tr id="{{_id}}">
-            <td id="chnName{{_id}}">{{chnName}}</td>
-            <td id="logo{{_id}}">
-                {{#if logo}}
-                <div class="col-xs-6 col-md-6">
-                    <a href="#" class="thumbnail">
-                        <img src="/user_data/{{logo}}">
-                    </a>
-                </div>
-                {{/if}}
-            </td>
-            <td id="engName{{_id}}">{{engName}}</td>
-            <td id="position{{_id}}">{{position}}</td>
-            <td id="time{{_id}}">{{time}}</td>
-            <td id="firstYear{{_id}}">{{firstYear}}</td>
-            <td id="hallName{{_id}}">{{hallName}}</td>
-            <td id="sponsor{{_id}}">{{sponsor}}</td>
-            <td id="undertaker{{_id}}">{{undertaker}}</td>
-            <td id="category{{_id}}">{{category}}</td>
-            <td id="website{{_id}}">{{website}}</td>
-            <td>
-                <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-pencil" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
-            </td>
-        </tr>
-        {{/each}}
-    </table>
+    {{#each data.list}}
+    <tr id="{{_id}}">
+        <td id="chnName{{_id}}">{{chnName}}</td>
+        <td id="logo{{_id}}">
+            {{#if logo}}
+            <div class="col-xs-6 col-md-6">
+                <a href="#" class="thumbnail">
+                    <img src="/user_data/{{logo}}">
+                </a>
+            </div>
+            {{/if}}
+        </td>
+        <td id="engName{{_id}}">{{engName}}</td>
+        <td id="position{{_id}}">{{position}}</td>
+        <td id="time{{_id}}">{{time}}</td>
+        <td id="firstYear{{_id}}">{{firstYear}}</td>
+        <td id="hallName{{_id}}">{{hallName}}</td>
+        <td id="sponsor{{_id}}">{{sponsor}}</td>
+        <td id="undertaker{{_id}}">{{undertaker}}</td>
+        <td id="category{{_id}}">{{category}}</td>
+        <td id="website{{_id}}">{{website}}</td>
+        <td>
+            <a onclick="ad('{{_id}}')"><span class="glyphicon glyphicon-pencil"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-edit" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
+        </td>
+    </tr>
+    {{/each}}
 </script>
 <script>
     loadPage()
@@ -234,6 +235,9 @@
                 }
             }
         });
+    }
+    function ad(id){
+        location.href="/ad/byfair?id="+id;
     }
     function del(id){
         $.get("/fair/remove",{_id:id}, function(result){
