--- a/views/role.html
+++ b/views/role.html
@@ -13,7 +13,15 @@
                 <input class="btn btn-success" type="button" value="添加" data-toggle="modal" data-target="#edit">
             </div>
         </form>
-        <div id="list"></div>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <td>名称</td>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody id="list"></tbody>
+        </table>
         <div class="text-right">
             <nav>
                 <ul class="pagination">
@@ -59,23 +67,15 @@
     </div><!-- /.modal -->
 </html>
 <script id="list-template" type="text/x-handlebars-template">
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <td>名称</td>
-            <th>操作</th>
-        </tr>
-        </thead>
-        {{#each data.list}}
-        <tr id="{{_id}}">
-            <td id="roleName{{_id}}">{{roleName}}</td>
-            <td>
-                <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-pencil" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
-            </td>
-        </tr>
-        {{/each}}
-    </table>
+    {{#each data.list}}
+    <tr id="{{_id}}">
+        <td id="roleName{{_id}}">{{roleName}}</td>
+        <td>
+            <a onclick="edit('{{_id}}')"><span class="glyphicon glyphicon-pencil" data-toggle="modal" data-target="#edit"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a onclick="del('{{_id}}')"><span class="glyphicon glyphicon-remove"/></a>
+        </td>
+    </tr>
+    {{/each}}
 </script>
 <script>
     loadPage()
