--- a/views/ad.html
+++ b/views/ad.html
@@ -1,8 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
+    <link rel="stylesheet" href="/stylesheets/bootstrap-select.min.css">
     <script src="/javascripts/page.js"></script>
+    <script src="/javascripts/bootstrap-select.min.js"></script>
+    <script src="/javascripts/jquery-util.js"></script>
     <div class="container">
         <p></p>
         <form class="form-inline">
+            <div class="form-group">
+                <select class="selectpicker" data-style="btn-warning">
+                    <option value=''>--请选择展会--</option>
+                </select>
+            </div>
             <div class="form-group">
                 <input type="text" class="form-control" id="search">
             </div>
@@ -71,6 +79,26 @@
 <script>
     $(document).ready(function(){
         $(".ad_edit").load("/adedit");
+        $.ajax({
+            type : "GET",
+            url : "/fair/findName",
+            success: function(data) {
+                var obj = data;
+                if(obj.status=="200"){
+                    var fairId = $.urlGet()['fairId'];
+                    obj.data.forEach(function(item){
+                        if(item._id==fairId){
+                            $('.selectpicker').append("<option value='"+item._id+"' selected>"+item.chnName+" （"+item.engName+"）</option>");
+                        }else{
+                            $('.selectpicker').append("<option value='"+item._id+"'>"+item.chnName+" （"+item.engName+"）</option>");
+                        }
+                        $('.selectpicker').selectpicker('refresh');
+                    })
+                }else{
+                    alert('加载失败。')
+                }
+            }
+        });
     });
     loadPage()
     function loadPage(pageNo,search){
